name:                cabal-version-bench
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.25

library cabal-version-lib
  exposed-modules: Distribution.Version
  default-language:    Haskell2010
  hs-source-dirs: src/
  build-depends: base ^>= 4.9, deepseq ^>= 1.4

executable cabal-version-bench
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends: cabal-version-lib
  build-depends: base ^>= 4.9, criterion ^>= 1.1, deepseq ^>= 1.4